homeworks/14_kubernetes_secrets/05-SecurityContext_NetworkPolicies/NetworkPolicies/Policies/Egress/00-deny-egress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: netology-np-demo
spec:
  podSelector: {}
  policyTypes:
  - Egress
