homeworks/14_kubernetes_secrets/05-SecurityContext_NetworkPolicies/NetworkPolicies/Policies/Egress/01-allow-inet-app1.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-inet
  namespace: netology-np-demo
spec:
  podSelector:
    matchLabels:
      role: app1
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/20
